# autish

./: CONTRIBUTING.md  README.md  TODO.md  _apply_changes.py  autish-tmp.md  pyproject.toml  tmp  tmp1  tmp2  tmp2.md  tmp3  tmp3.md
.github/: copilot-instructions.md
autish/: __init__.py  main.py  utils.py
autish/commands/: __init__.py  _crypto.py  _retposto_tui.py  _vorto_tui.py  bluetooth.py  disko.py  encik.py  kp.py  md.py  retposto.py  sekurkopio.py  shelo.py  sistemo.py  tempo.py  uzanto.py  vorto.py  wifi.py
tests/: __init__.py  test_disko.py  test_encik.py  test_import_export.py  test_kp.py  test_md.py  test_retposto.py  test_tempo.py  test_uzanto.py  test_vorto.py
