[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autish"
version = "0.0.1"
description = "Cross-platform CLI for essential tasks with minimum stimulation — designed with neurodiversity in mind."
readme = "README.md"
license = "GPL-3.0-only"
authors = []
keywords = ["cli", "neurodiversity", "accessibility", "linux", "esperanto"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
]
packages = [{ include = "autish" }]

[tool.poetry.urls]
Repository = "https://github.com/Ron-RONZZ-org/autish"
Issues = "https://github.com/Ron-RONZZ-org/autish/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = ">=0.12"
rich = ">=13"
psutil = ">=5.9"
pyperclip = ">=1.8"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
pytest-mock = ">=3"
ruff = ">=0.4"

[tool.poetry.scripts]
autish = "autish.main:app"
vorto = "autish.commands.vorto:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",  # Typer requires function calls (typer.Argument/Option) in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
